--- a/pages/donate.html
+++ b/pages/donate.html
@@ -477,8 +477,7 @@
                                     </div>
 
                                 </div>
-                                <p class="CreditCard_reports" style="margin-top: 24px;"><a href="./feedback/reports.html">Отчеты</a> и <a href="./feedback/feedback.html">отзывы</a> о проделанной
-                                    работе можно посмотреть тут</p>
+                                <p class="text" style="margin-top: 24px;"><a href="/feedback/reports">Отчеты</a> и <a href="/feedback">отзывы</a> о проделанной работе можно посмотреть тут</p>
                                 
                             </div>
                         </div>
