add button in feedback page

--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -580,6 +580,8 @@
                                 </div>
                             </div>
                         </div>
+                        <div style="display: flex; justify-content: center;"><button class=" Generic_buttonRoot Generic_medium ">Показать ещё</button>
+                        </div>
                     </div>
                 </div>
             </div>
