--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -671,7 +671,7 @@
                                 <div class="FeedbackView_time">24 июля 2024</div>
                             </div>
                         </div>
-                        <div class="FeedbackView_content"><img src="/assets/quote.svg" alt="quote">
+                        <div class="FeedbackView_content"><img src="../../assets/quote.svg" alt="quote">
                             <div class="FeedbackView_text">Благодарю Давида и его семью: Валерия, Мариам и Тамару за
                                 оказанную мне помощь. Это очень поможет в реабилитации и в жизни. Огромное вам спасибо.
                                 Также большое спасибо фонду "Подари подарок", Ларисе Безвербной и всем сотрудникам. Храни
