--- a/pages/families/family.html
+++ b/pages/families/family.html
@@ -546,11 +546,11 @@
                             </p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus" disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -601,11 +601,11 @@
                             <p class="NeedCard_title"> для Филиппа р.37 </p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus" disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -639,11 +639,11 @@
                             </p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus" disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -689,11 +689,11 @@
                             <p class="NeedCard_title">клетка </p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus" disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -743,11 +743,11 @@
                             <p class="NeedCard_title"></p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -780,11 +780,11 @@
                             <p class="NeedCard_title"></p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus" disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -864,11 +864,11 @@
                             <p class="NeedCard_title"></p>
                         </div>
                         <div class="NeedCard_flex">
-                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn" disabled=""><svg
+                            <div class="Counter_wrap NeedCard_counter"><button class="Counter_btn Counter_minus" disabled=""><svg
                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    class="Counter_btn Counter_plus" ><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                         height="10" fill="none" viewBox="0 0 10 10">
                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
